<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.android.scorekeeper.MainActivity">


        <TableRow>

            <EditText
                android:id="@+id/editTextTeamA"
                style="@style/editTextTeamStyle"
                android:hint="@string/TeamA" />

            <EditText
                android:id="@+id/editTextTeamB"
                style="@style/editTextTeamStyle"
                android:layout_column="3"
                android:hint="@string/TeamB"
                />
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/buttonARow1"
                style="@style/buttonPlusStyle"
                android:onClick="buttonARow1" />

            <TextView
                android:id="@+id/textViewCountARow1"
                style="@style/textViewCount" />

            <TextView
                style="@style/textViewRowName"
                android:text="@string/Row1" />

            <TextView
                android:id="@+id/textViewCountBRow1"
                style="@style/textViewCount" />

            <Button
                android:id="@+id/buttonBRow1"
                style="@style/buttonPlusStyle"
                android:onClick="buttonBRow1" />

        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/buttonARow2"
                style="@style/buttonPlusStyle"
                android:onClick="buttonARow2" />

            <TextView
                android:id="@+id/textViewCountARow2"
                style="@style/textViewCount" />

            <TextView
                style="@style/textViewRowName"
                android:text="@string/Row2" />

            <TextView
                android:id="@+id/textViewCountBRow2"
                style="@style/textViewCount" />

            <Button
                android:id="@+id/buttonBRow2"
                style="@style/buttonPlusStyle"
                android:onClick="buttonBRow2" />
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/buttonReset"
                style="@style/applyButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="buttonReset"
                android:text="@string/buttonReset" />
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/buttonSave"
                style="@style/applyButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="buttonSave"
                android:text="@string/buttonSave"

                />
        </TableRow>

        <TableLayout>

            <TableRow>

                <TextView
                    style="@style/Headline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/savedMatch" />
            </TableRow>

            <TableRow>

                <TextView
                    style="@style/valuesColumHeadline"
                    android:text="@string/number"
                    android:layout_weight="2"/>
                <TextView
                    style="@style/teamColumHeadline"
                    android:text="@string/TeamA" />

                <TextView
                    style="@style/valuesColumHeadline"
                    android:text="@string/fouls" />

                <TextView
                    style="@style/valuesColumHeadline"
                    android:text="@string/goals" />

                <TextView
                    style="@style/valuesColumHeadline"
                    android:text="@string/goals" />

                <TextView
                    style="@style/valuesColumHeadline"
                    android:text="@string/fouls" />

                <TextView
                    style="@style/teamColumHeadline"
                    android:text="@string/TeamB" />
            </TableRow>
        </TableLayout>
    </TableLayout>
</ScrollView>